Fix spacing and hide kitten in mobile layout

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -62,6 +62,7 @@ code, pre {
     background-color: #C1CFDC;
     text-shadow: 0 1px 0 #FFFFFF;
     border-radius: 4px;
+    margin-bottom: 5px;
 }
 #sidebar .inner {
     padding: 20px;
